<resources>
    <string name="app_name">Brewed Thoughts</string>

    // the Home Activity Screen
    <string name="home_view_banner_text">Home</string>
    <string name="journal_button_text">Journal</string>
    <string name="brew_button_text">Brew</string>
    <string name="tips_button_text">Tips</string>
    <string name="favorites">Favorites</string>


    <string name="welcome_user_text">Welcome User!</string>

    // the Brew Activity Screen
    <string name="app_title">Brewed Thoughts</string>

    <string name="brew_banner_text">Brew</string>
    <string name="beans_prompt_text">Beans</string>
    <string name="brewer_prompt_text">Brewer</string>
    <string name="method_prompt_text">Method (Optional)</string>
    <string name="grams_prompt_text">Coffee in grams</string>
    <string name="ml_prompt_text">Water in ml</string>
    <string name="water_temp_prompt_text">Water Temp</string>
    <string name="brew_save_button_text">Save</string>
    <string name="coffee_logo">Coffee Logo</string>
    <string name="back">Back</string>
    <string name="view_past_brews">View Past Brews</string>
    <string name="brew">Brew</string>

    <string-array name="brewers">
        <item>Select</item>
        <item>AeroPress</item>
        <item>Chemex</item>
        <item>Drip</item>
        <item>French Press</item>
        <item>Mocha Pot</item>
        <item>V60</item>
        <item>Phin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aeropress">Aeropress</string>
    <string name="brewers">Brewers</string>


    <!-- James Hoffman V60 Method -->
    <string name="james_hoffman_v60_description">James Hoffman\'s V60 coffee brewing technique includes specific water temperature and coffee-to-water ratios to enhance flavor extraction. The method involves steps like rinsing the paper filter, making a well in the coffee bed, blooming, swirling, and multiple pouring stages to achieve a balanced extraction.</string>
    <string-array name="james_hoffman_v60_steps">
        <item>Rinse paper in V60 and pre-heat it.</item>
        <item>Pour in coffee, make a well with your finger in the coffee bed.</item>
        <item>Start timer and gently pour 2x coffee dose as water to bloom (up to 3x if necessary).</item>
        <item>SWIRL IT GOOD.</item>
        <item>Wait 30 to 45 seconds.</item>
        <item>Spiral pour in 60% of total brew water in until 1:15.</item>
        <item>Keep it topped up, slowly pouring the rest of the brew water over 30 seconds.</item>
        <item>Little stir in one direction, then a little stir in the opposite direction.</item>
        <item>Once it has drained a bit, then SWIRL IT.</item>
        <item>Wait for the coffee to fully drain. You want a flat bed of coffee and no big grinds on the side of the filter paper.</item>
    </string-array>

    <!-- Advanced 4:6 Method -->
    <string name="advanced_46_method_description">The Advanced 4:6 Method, developed by Tetsu Kasuya, segments the pouring process into precise parts with control over each to manipulate the coffee\'s flavor profile, focusing on the balance and richness of the brew.</string>
    <string-array name="advanced_46_method_steps">
        <item>Place the coffee filter in the V60 and rinse it with hot water to remove any paper taste and to warm up the brewer. Discard the rinsing water.</item>
        <item>Grind your coffee beans to a medium consistency, similar to sea salt. Add the coffee grounds to the filter and gently tap to level the surface.</item>
        <item>Start your timer. Pour 60 ml of hot water evenly over the coffee grounds to evenly saturate them. Let it sit for 30–45 seconds.</item>
        <item>Slowly pour another 90 ml of water, starting at the center and moving outward in a slow spiral. Aim to finish this pour by the 1:15 minute mark on your timer.</item>
        <item>Pour the remaining 150 ml of water in two stages, allowing the water to drain somewhat between pours. Continue using a slow, spiral pouring technique.</item>
        <item>Allow the water to completely pass through the coffee, which should happen by about 3:30 minutes.</item>
        <item>Discard the used coffee grounds and filter. Pour the brewed coffee into a cup and enjoy.</item>
    </string-array>

    <string name="drip_coffee_maker_description">This is the most common type of coffee maker, often found in households and offices. It heats water and drips through a filter basket filled with ground coffee, collecting the brew in a carafe or pot below.</string>
    <string name="french_press_description">The French Press brews coffee by steeping ground coffee in hot water and then separating the grounds from the liquid with a plunger. It allows more oils and fine particles to remain in the coffee, enhancing its flavor.</string>
    <string name="espresso_machine_description">Espresso machines use high pressure to force hot water through very finely ground coffee, producing a concentrated and flavorful shot of coffee.</string>
    <string name="single_serve_coffee_maker_description">These machines brew one cup of coffee at a time using pre-packaged coffee pods or capsules, offering speed and convenience.</string>
    <string name="aeropress_description">The AeroPress uses air pressure to push hot water through coffee grounds, combining features of a French press and an espresso machine to produce smooth, rich coffee.</string>
    <string name="pour_over_description">Pour over involves hot water being poured over coffee grounds in a filter, with the brew draining into a carafe or mug. It allows precise control over brewing variables and highlights nuanced flavors.</string>
    <string name="moka_pot_description">Also known as a stovetop espresso maker, the Moka pot brews coffee by passing boiling water pressurized by steam through ground coffee, producing a strong, concentrated coffee.</string>
    <string name="siphon_description">A siphon brewer uses a heat source to create vapor pressure in a lower chamber which forces water into an upper chamber where it mixes with coffee grounds. The brewed coffee then siphons back into the lower chamber, known for its theatrical brewing process and clean, crisp coffee.</string>
    <string name="add_note">Add Note</string>
    <string name="delete">Delete</string>
    <string name="method">Method</string>
    <string name="grams">Grams</string>
    <string name="note">Note</string>
    <string name="light_roast">Light Roast: Light brown in color. No oil on the surface. Best way to brew is either drip or pour over. Use a slightly higher temp, and finer grind size</string>
    <string name="medium_roast">Medium Roast: Medium brown in color, stronger flavor, and non-oily surface. Good to brew with cold brew, pour over, and chem-ex</string>
    <string name="dark_roast">Dark Roast: Shiny black with oily surface. More bitter than the varieties. Darker color. Use a lower water temp than normal. Depending on blend, grind size should be larger.</string>
    <string name="HarioV60">Pour over involves pouring hot water over coffee grounds in a filter. The water drains through the coffee and filter into a carafe or mug. Devices like the V60 and Chemex are popular for this brewing method. It\'s favored for its ability to control every variable of the brewing process and highlight nuanced flavors.</string>
    <string name="pour_over">Pour Over</string>
    <string name="start">Start</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="create_brew">Create Brew</string>
    <string name="timer">Timer</string>
    <string name="past_brews">Past Brews</string>
    <string name="placeholder">placeholder</string>
    <string name="favorite">Favorite</string>
    <string name="recent_brews">Recent Brews</string>

    <string name="mocha_pot_tip">Moka Pot Tip: Pre-heat the Water: Start with pre-heated water in the bottom chamber of your Moka pot. This reduces the time the coffee sits on the heat, preventing overheating and reducing the likelihood of a bitter flavor. Fill the filter basket with a fine, but not espresso-fine, grind of coffee without packing it down. Assemble the pot and place it on medium heat. When you hear a hissing sound, remove it from the heat to avoid burning the coffee. This results in a smoother and richer espresso-like coffee.</string>
    <string name="french_press_tip">French Press Tip: Perfect Your Grind and Water Temperature: Use coarse coffee grounds to avoid a muddy cup and to ensure optimal extraction. The ideal water temperature for French press coffee is around 200°F (just off the boil). Too hot water can extract unwanted bitter compounds, while too cool water won\'t extract flavors efficiently. After adding water to the grounds, stir briefly, then let it steep for about 4 minutes before pressing down the plunger.</string>
    <string name="v60_tip">V60 Tip: Pre-wet the Filter: Before adding your coffee grounds, place the filter in the V60 and rinse it with hot water. This pre-wetting step serves two main purposes: it gets rid of any papery taste from the filter and warms up your V60 and coffee mug or carafe. This helps maintain a consistent brewing temperature, leading to a more even extraction of the coffee flavors. Be sure to discard the rinse water before you begin brewing!</string>
    <string name="aeropress_method">AeroPress:

Place a filter in the cap and rinse with hot water. Assemble the AeroPress in the inverted position.
Add 17 grams of medium-fine coffee grounds.
Pour in 250 ml of water at about 85°C (185°F). Stir gently.
Let steep for about 1 minute, then stir again.
Attach the cap with the filter, flip the AeroPress onto a sturdy mug, and press down slowly.</string>
    <string name="french_press_method">French Press:

Add 30 grams of coarse coffee grounds to the French press.
Pour in 500 ml of water just off the boil (about 94°C or 200°F).
Stir the grounds gently to ensure they are fully saturated.
Let steep for 4 minutes.
Slowly press down the plunger.</string>
    <string name="phin_method">Phin (Vietnamese Coffee Maker):

Add 20 grams of medium grind coffee to the phin filter. Tap to level the coffee but do not tamp.
Place the damper on top of the coffee and press down slightly.
Pour 20 ml of hot water to bloom the coffee for about 30 seconds.
Pour 60 ml of hot water over the coffee and cover.
Let the coffee drip into a glass. It should take about 4 minutes.</string>
    <string name="v60_method">V60:

Place a filter in the V60 and rinse with hot water. Discard the rinse water.
Add 20 grams of medium-fine coffee grounds.
Pour 60 ml of water just off the boil over the grounds to bloom. Wait 30 seconds.
Continue pouring water in slow circles until you reach 300 ml.
Allow all the water to drip through the filter before serving.</string>
    <string name="moka_pot_method">Moka Pot:

Fill the bottom chamber with hot water up to the safety valve.
Place the coffee basket in the bottom chamber and fill it with 20 grams of fine coffee grounds. Do not tamp.
Screw on the top chamber.
Place the Moka pot on medium heat and wait until coffee starts to emerge. Remove from heat once it starts gurgling.</string>
    <string name="chemex_method">Chemex:

Place a Chemex filter in the brewer and rinse with hot water. Discard the rinse water.
Add 42 grams of medium-coarse coffee grounds.
Pour 150 ml of water just off the boil over the grounds to bloom. Wait 45 seconds.
Continue adding water in stages until reaching a total of 700 ml, pouring in a circular motion and pausing as needed.
Allow the coffee to finish dripping before serving.</string>


</resources>