<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box">

    <TextView
        android:id="@+id/chooseTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Choose"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/beansLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/beansText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beans_prompt_text"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/brewerLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/brewerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brewer_prompt_text"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/methodLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/methodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gramsLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/gramsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mlLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/mlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml_prompt_text"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tempLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_temp_prompt_text"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noteLayoutView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/noteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addNoteView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_marginStart="20sp"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center"
            android:background="@drawable/heart_icon"
            android:contentDescription="@string/favorite"
            android:clickable="true"
            android:focusable="true"/>
        <Button
            android:id="@+id/addNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>