<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark_coffee">

    <TextView
        android:id="@+id/brewBanner"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brew_banner_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_frame_brew">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/beansTextInput"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/beans_prompt_text"
                android:inputType="text" />

            <EditText
                android:id="@+id/methodTextInput"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="@string/method_prompt_text"
                android:inputType="text"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/brewerTextView"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_width="170sp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:text="@string/brewer_prompt_text"/>

                <Spinner
                    android:id="@+id/brewerSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="10sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/gramsAmountInput"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:text="@string/grams_prompt_text"/>

                <EditText
                    android:id="@+id/coffeeGramsNumberPicker"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:autofillHints="" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mlAmountInput"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:text="@string/ml_prompt_text"/>

                <EditText
                    android:id="@+id/waterMLNumberPicker"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/waterTempInput"
                    android:text="@string/water_temp_prompt_text"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:ems="10"/>

                <EditText
                    android:id="@+id/waterTempNumberPicker"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>



    <Button
        android:id="@+id/brewSaveButton"
        android:layout_width="300sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/custom_button"
        android:text="@string/brew_save_button_text" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/brewBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/custom_button"
            android:layout_margin="10sp"
            android:text="@string/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>